# Agentic-Ai-First

./: README.md
03_litellm_openai_agent/litellm-01/myproject/: .env  pyproject.toml
03_litellm_openai_agent/litellm-01/myproject/src/myproject/: main.py
03_litellm_openai_agent/litellm-02/myproject/: .env  chat_history.json
03_litellm_openai_agent/litellm-02/myproject/src/myproject/: main.py
03_litellm_openai_agent/litellm-03/myproject/: .env  pyproject.toml
03_litellm_openai_agent/litellm-03/myproject/src/myproject/: main.py
hello-agent-004/hello-agent/: .env  pyproject.toml
hello-agent-004/hello-agent/src/hello_agent/: main.py
hello-agent-004/hello-agent2/: pyproject.toml
hello-agent-004/hello-agent2/src/hello_agent2/: __init__.py  main.py
open-router-002/openrouterproject-pkg/: pyproject.toml
open-router-002/openrouterproject-pkg/src/openrouterproject_pkg/: __init__.py  main.py
uv-01/: main.py  pyproject.toml
