[project]
name = "hello-agent2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "waniya shah", email = "160254821+Waniyashah@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
hello-agent2 = "hello_agent2:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
