[project]
name = "myproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "waniya shah", email = "160254821+Waniyashah@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "litellm>=1.72.0",
]

[project.scripts]
myproject = "myproject:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
